developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_virtual_key_in_context.kmn
store(&NAME) 'ERROR_VirtualKeyInContext'
store(&VERSION) '9.0'

begin Unicode > use(main)

group(main) using keys
store (consonant) "lmn"
store (sylcons) U+1E37 U+1E43 U+1E47


c ERROR_VirtualKeyInContext
[K_BKQUOTE] + any(consonant) > index (sylcons, 2)
